[build-system]
requires = [ "setuptools >= 61.0.0", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "1.0b5"
version_pattern = "MAJOR.MINOR[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{pep440_version}"',
]
"setup.py" = [
    "version='{pep440_version}'",
]
"idoitapi/API.py" = [
    "API_AGENT_VERSION = '{pep440_version}'",
]
"docs/make-apidoc.ps1" = [
    ' -R "{pep440_version}"'
]
"docs/make-apidoc" = [
    ' -R "{pep440_version}"'
]

[mypy]
packages = "idoitapi"
# strict_optional = false
