[metadata]
name = idoitapi
version = attr: idoitapi.API.API_AGENT_VERSION
description = i-doit JSON RPC API
long_description = file: README.rst
license = file: LICENSE
author = Martin Vorländer
author_email = mv@pdv-systeme.de
url = https://github.com/mvorl/i-doit_API
platforms = any
keywords = i-doit
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = True
install_requires = requests
python_requires = >=3.0
tests_require = nose

[options.packages.find]
where = ., ./idoitapi

[options.extras_require]
docs = Sphinx
